Implement factories, command, handlers
Add parser
Remove abstract mapper
Rewrite mappers
Add bot states
Implement add route message handler and start handler

Signed-off-by: Yauheni.Filipovich <yauheni.filipovich@ukg.com>